[package]
name = "rperf3-rs"
version = "0.6.1"
edition = "2021"
authors = ["Arunkumar Mourougappane <amouroug@buffalo.edu>"]
description = "High-performance network throughput measurement tool, inspired by iperf3."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arunkumar-mourougappane/rperf3-rs"
readme = "README.md"
keywords = ["network", "benchmarking", "performance", "iperf", "bandwidth"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "rperf3"
path = "src/bin/main.rs"

[lib]
name = "rperf3"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2.0.17"
byteorder = "1"
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rand = "0.9.3"
hostname = "0.4.2"
socket2 = "0.5"
libc = "0.2"

[dev-dependencies]
proptest = "1.5"
mockall = "0.13"
tokio-test = "0.4"
